src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_CMConfig__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                    <default>true</default>
                    <label>Product/Service</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__NetAdjustmentPercent__c</fullName>
        <description>The net adjustment percent</description>
        <label>Net Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</description>
        <inlineHelpText>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionCost__c</fullName>
        <description>The rolled up extended cost of options for the product</description>
        <inlineHelpText>The rolled up extended cost of options for the product</inlineHelpText>
        <label>Option Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected option</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Option Line Items</relationshipLabel>
        <relationshipName>AgreementOptionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionPrice__c</fullName>
        <description>The rolled up adjusted price of options for the product</description>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OrderedQuantity__c</fullName>
        <description>The Total quantity for which sales orders have been created against the agreement line item when the order is accepted</description>
        <inlineHelpText>The Total quantity for which sales orders have been created against the agreement line item when the order is accepted</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ParentBundleNumber__c</fullName>
        <description>Represents the parent bundle number associated with the child bundle</description>
        <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
        <label>Parent Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the line item</description>
        <inlineHelpText>ID of the payment term associated with the line item</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustmentAmount__c</fullName>
        <description>The price adjustment amount</description>
        <label>Price Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustmentType__c</fullName>
        <label>Price Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustment__c</fullName>
        <description>The price adjustment is computed using aggregate price rules</description>
        <label>Price Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceGroup__c</fullName>
        <description>The price group associated with the product or option</description>
        <inlineHelpText>The price group associated with the product or option</inlineHelpText>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Ramp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</description>
        <inlineHelpText>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</inlineHelpText>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list associated with the product or service</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceMethod__c</fullName>
        <description>The price method</description>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <label>Pricing Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <inlineHelpText>The pricing date, The product list price is determined based on this date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PrimaryLineNumber__c</fullName>
        <description>Represents the unique number for each primary line item</description>
        <inlineHelpText>Represents the unique number for each primary line item</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ProductOptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product option</description>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PurchaseId__c</fullName>
        <description>The purchase identifier associated with the asset</description>
        <externalId>true</externalId>
        <inlineHelpText>The purchase identifier associated with the asset</inlineHelpText>
        <label>Purchase Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForActivationDate__c</fullName>
        <description>The date the order item is ready for activation. The order item is activated on this date.</description>
        <inlineHelpText>The date the order item is ready for activation. The order item is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForBillingDate__c</fullName>
        <description>The date when the order item is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order item is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForFulfillmentDate__c</fullName>
        <description>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</description>
        <inlineHelpText>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</inlineHelpText>
        <label>Ready For Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForRevRecDate__c</fullName>
        <description>The date when the order item is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is order item for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__RenewalAdjustmentAmount__c</fullName>
        <description>The renewal price adjustment amount.</description>
        <inlineHelpText>The renewal price adjustment amount.</inlineHelpText>
        <label>Renewal Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__RenewalAdjustmentType__c</fullName>
        <description>The renewal price adjustment type</description>
        <inlineHelpText>The renewal price adjustment type</inlineHelpText>
        <label>Renewal Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Uplift Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingUom__c</fullName>
        <description>The selling unit of measure for the product</description>
        <inlineHelpText>The selling unit of measure for the product</inlineHelpText>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated service location</description>
        <inlineHelpText>ID of the associated service location</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Ship To)</relationshipLabel>
        <relationshipName>AgreementLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SubType__c</fullName>
        <description>The user defined sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>Apttus_CMConfig__AgreementSummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TotalQuantity__c</fullName>
        <description>The total quantity is Quantity + Asset Quantity</description>
        <inlineHelpText>The total quantity is Quantity + Asset Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__NetPrice__c</fullName>
        <description>The net price for the product or service is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BidGrid_Country__c</fullName>
        <label>BidGrid Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Currency__c</fullName>
        <formula>TEXT(Apttus__AgreementId__r.Bid_Currency_CPQ__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Diagnostic_Code__c</fullName>
        <label>Budget Diagnostic Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site Start-Up</fullName>
                </value>
                <value>
                    <fullName>Biostatistics</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>Clinical Monitoring</fullName>
                </value>
                <value>
                    <fullName>Clinical Technology</fullName>
                </value>
                <value>
                    <fullName>DTE - Centralized Monitoring</fullName>
                </value>
                <value>
                    <fullName>Study Management (CRD and/or CPM Models)</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>EXPENSES</fullName>
                </value>
                <value>
                    <fullName>Medical Services (Includes Med Safety/Data Review)</fullName>
                </value>
                <value>
                    <fullName>Non-CDS</fullName>
                </value>
                <value>
                    <fullName>QECG</fullName>
                </value>
                <value>
                    <fullName>Other Clinical: Investigator Payment &amp; EDC Trainers</fullName>
                </value>
                <value>
                    <fullName>Investigator meetings – Event design &amp; content management</fullName>
                </value>
                <value>
                    <fullName>Investigator meetings – F2F meeting logistics</fullName>
                </value>
                <value>
                    <fullName>Investigator meetings – Virtual meeting</fullName>
                </value>
                <value>
                    <fullName>Integrated Processes and Technology</fullName>
                </value>
                <value>
                    <fullName>Medical Writing</fullName>
                </value>
                <value>
                    <fullName>Pharmacovigilance</fullName>
                </value>
                <value>
                    <fullName>Patient Recruitment</fullName>
                </value>
                <value>
                    <fullName>PK/PD Services</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>RIM TMF</fullName>
                </value>
                <value>
                    <fullName>Regulatory Consulting</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Safety Operations</fullName>
                </value>
                <value>
                    <fullName>BPO: Safety Operations</fullName>
                </value>
                <value>
                    <fullName>Safety Systems</fullName>
                </value>
                <value>
                    <fullName>Medical Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COE_Name__c</fullName>
        <formula>TEXT(Apttus__ProductId__r.COE_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COE Name</label>
        <type>Text</type>
    </fields>
</CustomObject>